--- a/src/main/webapp/principal.xhtml
+++ b/src/main/webapp/principal.xhtml
@@ -4,9 +4,42 @@
       xmlns:h="http://java.sun.com/jsf/html">
 <h:head>
     <title>Pantalla principal</title>
+    <h:outputStylesheet library="css" name="styles.css"></h:outputStylesheet>
 </h:head>
 
 <h:body>
     Bienvenido a la pagina principal
+
+    <!-- Tabla JSF con 5 columnas -->
+    <h:dataTable id="tblEmpleados" value="#{principalController.empleados}" var="empleado" border="1" headerClass="headerTable">
+        <h:column>
+            <f:facet name="header">Nombre</f:facet>
+            <h:outputText value="#{empleado.nombre}"></h:outputText>
+
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Primer Apellido</f:facet>
+            <h:outputText value="#{empleado.primerApellido}"></h:outputText>
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Segundo Apellido</f:facet>
+            <h:outputText value="#{empleado.segundoApellido}"></h:outputText>
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Puesto</f:facet>
+            <h:outputText value="#{empleado.puesto}"></h:outputText>
+        </h:column>
+
+        <h:column>
+            <f:facet name="header">Estatus</f:facet>
+            <h:outputText value="#Hablitado" rendered="#{empleado.estatus}"></h:outputText>
+            <h:outputText value="#Inactivo" rendered="#{!empleado.estatus}"></h:outputText>
+        </h:column>
+    </h:dataTable>
+
+
 </h:body>
 </html>
